# Learning-Django

./: .gitignore  README.md
django-rest-framework/guide-of-the-django-rest-framework/: db.sqlite3  pyproject.toml
django-rest-framework/guide-of-the-django-rest-framework/core/: api.py  settings.py  urls.py
django-rest-framework/guide-of-the-django-rest-framework/rental/: api_views.py  models.py  permissions.py  serializers.py
django-rest-framework/guide-of-the-django-rest-framework/rental/migrations/: 0001_initial.py  0002_belonging_owner.py  0003_friend_owner.py  0004_friend_email.py
django-rest-framework/project1/: .env-example  requirements.txt
django-rest-framework/project1/authors/: api.py  serializer.py  urls.py  validators.py
django-rest-framework/project1/authors/forms/: recipe_form.py
django-rest-framework/project1/authors/views/: __init__.py
django-rest-framework/project1/recipes/: models.py  permissions.py  serializers.py  urls.py
django-rest-framework/udemy-course/: db.sqlite3
django-rest-framework/udemy-course/health-management/: db.sqlite3
project1/: .coveragerc  db.sqlite3  requirements.txt
project1/base_templates/global/: base.html
project1/project/: settings.py  urls.py
project1/recipes/: admin.py  models.py  urls.py  views.py
project1/recipes/migrations/: 0001_initial.py  0002_rename_authoer_recipe_author.py  0003_alter_recipe_category_alter_recipe_cover.py
project1/recipes/tests/: test_recipe_base.py  test_recipe_model_category.py  test_recipe_models_recipe.py  test_recipe_urls.py  test_recipe_views.py
(+43 files in other folders)
